<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    tools:context=".Admin.AdminDashboardActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/adminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_dashboard_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp" />

    <!-- ScrollView with Buttons -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/adminTitle"
        android:layout_above="@id/adminLogoutBtn"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/viewPlayersBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/view_players"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_easy"
                android:elevation="6dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/addGameTemplateBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/add_game_template"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_medium"
                android:elevation="6dp"
                android:layout_marginTop="50dp"

                android:layout_marginBottom="20dp" />
        </LinearLayout>
    </ScrollView>

    <!-- Logout Button -->
    <Button
        android:id="@+id/adminLogoutBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/admin_logout"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_logout"
        android:elevation="6dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp" />



</RelativeLayout>
